# claude-indexing

./: .env.example  .gitignore  CHANGELOG.md  README.html  README.md  docker-compose.yml  pyproject.toml
docs/: codebase-indexing.md
scripts/: migrate_codechunk_to_document.py
src/indexer/: cli.py  config.py  defaults.py  docker-compose.yml  flow.py  mcp.py
src/indexer/skills/: codebase-search.md
