[project]
name = "claude-indexer"
version = "0.1.0"
description = "Semantic codebase indexing for Claude Code via CocoIndex + Qdrant + MCP"
requires-python = ">=3.11"
dependencies = [
    # Pin to 0.3.x — cocoindex 1.0 rewrote the flow_def / sources / targets API
    # and the pipeline in flow.py uses the 0.3.x surface.
    "cocoindex==0.3.36",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.scripts]
indexer = "indexer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/indexer"]
